Fix nav indicator overflowing top border

--- a/css/components.css
+++ b/css/components.css
@@ -53,7 +53,7 @@
 .nav-item.active::before {
   content: '';
   position: absolute;
-  top: -1px;
+  top: 0;
   left: 50%;
   transform: translateX(-50%);
   width: 32px;
